--- a/static/md/1.0_Introduction.md
+++ b/static/md/1.0_Introduction.md
@@ -14,3 +14,8 @@ class: left
 * Provides High-level ergonomics and low-level control
 
 * Balancing powerful technical capacity and a great developer experience
+
+---
+class: left
+
+# Summary
