fix: refactored variable and mutability

--- a/static/md/3.1_Variables_and_Mutability.md
+++ b/static/md/3.1_Variables_and_Mutability.md
@@ -10,7 +10,7 @@ class: left
 
 # Variables
 
-* Variables are declared using `let`
+Variables are declared using `let`
 
 ```rust
 fn main() {
@@ -28,7 +28,7 @@ class: left
 
 # Constants
 
-* Constants are declared using `const`
+Constants are declared using `const`
 
 ```rust
 fn main() {
@@ -51,7 +51,8 @@ class: left
 
 # Variables and Mutability
 
-* Variables are immutable by default
+Variables are immutable by default
+
 ```rust
 fn main() {
   let x = 5;
@@ -75,7 +76,7 @@ error[E0384]: cannot assign twice to immutable variable `x`
 ---
 class: left
 
-* add `mut` to make variables mutable
+Add `mut` to make variables mutable
 
 ```rust
 fn main() {
@@ -124,8 +125,8 @@ fn main() {
   println!("The value of x is: {}", x);
 }
 ```
-* When declaring a new variable using `let` with the same name as the old variable, 
-  the new variable is shadowing the old one.
+
+When declaring a new variable using `let` with the same name as the old variable, the new variable is shadowing the old one.
 
   * Shadowing helps perform transformations on immutable variables
 
@@ -138,7 +139,7 @@ class: left
 
 * `mut` changes the value where as `shadowing` creates a new variable
 
-* This gives the flexibility of changing the types of the variable
+* `shadowing` gives the flexibility of changing the types of the variable
 
 ```rust
 let spaces = "   "; // type of String
@@ -159,3 +160,4 @@ class: left
 * `const` can't be mutable
 
 * `shadowing` creates new variable
+s
