refactor: modify existing chapters

--- a/static/md/3.1_Variables_and_Mutability.md
+++ b/static/md/3.1_Variables_and_Mutability.md
@@ -139,7 +139,9 @@ class: left
 
 * `mut` changes the value where as `shadowing` creates a new variable
 
-* `shadowing` gives the flexibility of changing the types of the variable
+* `mut` will only change the value not the type
+
+* `shadowing` gives the flexibility of changing the type of the variable
 
 ```rust
 let spaces = "   "; // type of String
@@ -159,5 +161,4 @@ class: left
 
 * `const` can't be mutable
 
-* `shadowing` creates new variable
-s
+* `shadowing` creates new variables
