--- a/static/md/3.2_Data_Types.md
+++ b/static/md/3.2_Data_Types.md
@@ -11,10 +11,8 @@ class: left
 
 * Rust is a statically typed language and every value is of a certain `type`
 
-* You can assign the types or compiler will infers types based on the `value` 
+* You can **annotate** the types or compiler will **infer** types based on the `value` 
   and `how it is used`
-
-* In case if it can't you have to provide `type annotations`
 
 ---
 class: left
@@ -23,20 +21,46 @@ class: left
 
 ```rust
 fn main() {
-  let x;
+  let x = 4;
   println!("The value of x is: {}", x);
 }
 ```
 
-Rust can't infer since no value is given
+Rust infers type from the value provided
 
 ```rust
 fn main() {
-  let x: i32;
+  let x; // can't infer as no value provided and not annotated as well
   println!("The value of x is: {}", x);
 }
 ```
-Type annotation is provided, so don't throw error
+
+Throws an errror as Rust can't infer, because no value is given
+
+```rust
+error[E0282]: type annotations needed
+   --> src/main.rs:230:7    
+    |   let x;    
+    |       ^                                           
+    |       |
+    |       cannot infer type for `_`
+    |       consider giving `x` a type
+error: aborting due to previous error
+```
+
+---
+class: left
+
+# Type annotation
+
+```rust
+fn main() {
+  let x: i32; // type annotated
+  println!("The value of x is: {}", x);
+}
+```
+
+Type annotation is provided so Rust won't complain
 
 ---
 class: left
@@ -67,25 +91,40 @@ class: left
 
 # integers
 
-* Numbers with out decimal points
+Numbers with out decimal points
 
-Length 	Signed 	Unsigned
-8-bit 	i8 	u8
-16-bit 	i16 	u16
-32-bit 	i32 	u32
-64-bit 	i64 	u64
-arch 	isize 	usize 
+| Length | Signed  | Unsigned |
+|--------|---------|----------|
+| 8-bit  | `i8`    | `u8`     |
+| 16-bit | `i16`   | `u16`    |
+| 32-bit | `i32`   | `u32`    |
+| 64-bit | `i64`   | `u64`    |
+| arch   | `isize` | `usize`  |
 
-* defaults to i32 and 
+* **signed** integer types start with **i** and **unsigned** with **u**
+
+* Where n is the number of bits that variant uses
+
+  * signed integter can store -(2<sup>n - 1</sup>) to 2<sup>n - 1</sup> - 1
+
+  * unsigned integter can store `0` to 2<sup>n - 1</sup> - 1
+
+* isize and usize types depend on the computer architecture
+
+* defaults to i32, generally the fastest, even on 64-bit systems
 
 ---
 class: left
 
 # floating-point numbers
 
-* Numbers with decimal points
+Numbers with decimal points
 
-* f32 and f64
+* Two types 
+
+  * f32 : single-precision float
+
+  * f64 : double precision float
 
 * defaults to f64
 
@@ -100,22 +139,9 @@ fn main() {
 ---
 class: left
 
-# floating-point numbers
+# Numeric Operations
 
-* Number types has the usual basic mathematical operations you’d expect 
-
-* addition
-
-* subtraction
-
-* multiplication
-
-* division and remainder
-
----
-class: left
-
-# Example
+Number types has the usual basic mathematical operations you’d expect
 
 ```rust
 fn main() {
@@ -140,7 +166,7 @@ class: left
 
 # Boolean
 
-* Specified using `bool`
+Specified using `bool`
 
 * `true` 
 
@@ -148,7 +174,7 @@ class: left
 
 ```rust
 fn main() {
-  let t = true; 
+  let t = true; // type infered from value
   let f: bool = false; // with explicit type annotation
 }
 ```
@@ -158,7 +184,7 @@ class: left
 
 # Characters
 
-* `char` type is the language’s most primitive alphabetic type, 
+`char` type is the language’s most primitive alphabetic type, 
 
 ```rust
 fn main() {
@@ -168,10 +194,13 @@ fn main() {
 }
 ```
 
-* represents a Unicode Scalar Value
+* Specified with **single quotes**, as opposed to strings that use double quotes
 
-* ASCII, Accented letters, Chinese/Japanese/Korean ideographs, emoji, and zero 
-  width spaces
+* represents a Unicode Scalar Value, which means a lot more than just ASCII
+
+* Accented letters, Chinese/Japanese/Korean ideographs, emoji, and zero width spaces
+
+* a “character” isn’t really a concept in Unicode, so your human intuition for what a “character” is may not match up with what a char is in Rust
 
 ---
 class: left
@@ -191,11 +220,31 @@ class: left
 
 # Tuples
 
-* a comma-separated list of values inside parentheses
+A comma-separated list of values inside parentheses
 
 * Can have different types of values
 
-* Access elements by destructuring through pattern matching 
+```rust
+fn main() {
+  let tup = (500, 6.4, 'X'); // integer, float and char
+  println!("The value of y is: {}", y);
+}
+```
+
+* Tuple inside a tuple
+
+```rust
+let tup = (500, 6.4, ('X', 200));
+```
+
+<!-- can tuples be extended -->
+
+---
+class: left
+
+# Access elements
+
+Access elements by **destructuring** through pattern matching 
 
 ```rust
 fn main() {
@@ -205,25 +254,13 @@ fn main() {
   println!("The value of y is: {}", y);
 }
 ```
+* Ignore the destructured values with `_`
 
-* Can ignore the values with `_`
-
-* Tuple inside a tuple
-
-```rust
-let tup = (500, 6.4, ('X', 200))
-}
-```
-<!-- can tuples be extended -->
-
----
-class: left
-
-* Can also access through dot notation
+Can also Access elements with **dot notation**
 
 ```rust
 fn main() {
-  let x: (i32, f64, char) = (500, 6.4, 'x'); // annotated
+  let x: (i32, f64, char) = (500, 6.4, 'x');
 
   let five_hundred = x.0;
 
@@ -238,9 +275,11 @@ class: left
 
 # Array
 
-* A comma-separated list of values inside square brackets
+A comma-separated list of values inside square brackets
 
-* Unlike a tuple, every element of an array must be of same type
+* Single chunk of memory allocated on the stack
+
+* Unlike tuple, every element of an array must be of same type
 
 * arrays are fixed length
 
@@ -255,9 +294,7 @@ class: left
 
 # Access elements
 
-* Invalid array element access results in a runtime error 
-
-* Access individual values in the array by `Indexing`
+Access individual values in the array by `Indexing`
 
 ```rust
 fn main() {
@@ -268,7 +305,36 @@ fn main() {
 }
 ```
 
-<!-- ** tuple of tuples and array of arrays -->
+---
+class: left
+
+# Invalid Array Element Access
+
+Invalid array element access results in a runtime error
+
+```rust
+fn main() {
+  let a = [1, 2, 3, 4, 5];
+  let index = 10;
+  let element = a[index];
+  println!("The value of element is: {}", element);
+}
+```
+
+* Code will compile
+
+* Results in a runtime error
+
+```text
+$ cargo run
+   Compiling arrays v0.1.0 (file:///projects/arrays)
+    Finished dev [unoptimized + debuginfo] target(s) in 0.31 secs
+     Running `target/debug/arrays`
+thread '<main>' panicked at 'index out of bounds: the len is 5 but the index is
+ 10', src/main.rs:6
+note: Run with `RUST_BACKTRACE=1` for a backtrace.
+```
+<!-- ** array of arrays -->
 
 ---
 class: left
@@ -283,4 +349,4 @@ class: left
 
 * Tuples can be mixed type 
 
-* Arrays should be single type and fixed length
+* Arrays should be of single type and fixed length
