--- a/static/md/3.3_How_Funcitons_Work.md
+++ b/static/md/3.3_How_Funcitons_Work.md
@@ -8,6 +8,16 @@ class: left
 
 # Functions
 
+```rust
+fn main() {
+    println!("Hello, world!");
+    another_function();
+}
+fn another_function() {
+    println!("Another function.");
+}
+```
+
 * `fn` declares a function
 
 * `main` function is the default entry point for the program
@@ -21,7 +31,7 @@ class: left
 
 # Function Parameters
 
-* special variables that are part of a function’s signature
+Special variables that are part of a function’s signature
 
 ```rust
 fn main() {
@@ -39,32 +49,25 @@ class: left
 
 # Statements
 
-* Instructions that perform some action and do not return a value
+Instructions that perform some action and do not return a value
 
-```rust
-let y = 6;
-```
-* You can't 
+* `let y = 6;`  is a statement
 
-```rust
-let x = (let y = 6);
-
-```
-
-because `(let y = 6);` is a statement, dosen't return any value
+* You can't `let x = (let y = 6);` because `(let y = 6);` is a statement, 
+  dosen't return any value
 
 ---
 class: left
 
 # Expressions
 
-* Instructions that perform some action and return a value
+Instructions that return a value
 
 * Expressions allways evaluate to a resulting value
 
-* In `let y = 6;`  6 is an expression
-
 * `5 + 6` is an expression
+
+* In `let y = 6;`  6 is an expression
 
 * Calling a function, macro and new scopes `{}` are expressions
 
@@ -74,6 +77,7 @@ class: left
 # Statements and Expressions
 
 * Adding a semicolon to the end of an expression, makes it a statement
+
 <!-- give more examples and variations -->
 
 ---
@@ -83,6 +87,8 @@ class: left
 
 * Functions can return values
 
+* We declare their type after an arrow `->`
+
 * Return type is synonymous with the value of the final expression
 
 * Return early using `return` keyword or last expression implicitly
@@ -90,8 +96,17 @@ class: left
 ---
 class: left
 
+# macros
+
+* Macros unlike functions end with an `!`
+
+* Macros expand at compile time to more complex function calls
+
+---
+class: left
+
 # Example 1
-*
+
 ```rust
 fn five() -> i32 {
     5
@@ -105,43 +120,47 @@ fn five() -> i32 {
 ---
 class: left
 
-# macros
-
-* Macros unline functions end with an `!`
-
-* Macros expand at compile time to more complex function calls
-
----
-class: left
-
 # Example 2
-
-```rust
-fn main() {
-    let x = five();
-
-    println!("The value of x is: {}", x);
-    // Do we need the semicolon here... ?
-}
-```
-
----
-class: left
-
-# Example 3
 
 ```rust
 fn plus_one(x: i32) -> i32 {
     x + 1;
 }
 ```
+
+```rust
+error[E0308]: mismatched types
+ --> src/main.rs:7:28
+  |
+7 |   fn plus_one(x: i32) -> i32 {
+  |  ____________________________^
+8 | |     x + 1;
+  | |          - help: consider removing this semicolon
+9 | | }
+  | |_^ expected i32, found ()
+  |
+  = note: expected type `i32`
+             found type `()`
+```
+
 * expect the return type `i32`
+
 * `x+1` evaluates to an expression and give an `i32` but `;` makes it a statement
-  and returns nothing
-* panics with `mismatched types` error.       
+  and returns an empty tuple `()`
+
+* panics with `mismatched types` error.
 
 ---
 class: left
 
 # Summary
 
+* `main` is the entry point 
+
+* `fn` declares a function
+
+* function implicitly returns the last expression
+
+* else will return an empty tuple `()`
+
+* you can explicitly return with `return` keyword
