--- a/static/md/3.4_Comments.md
+++ b/static/md/3.4_Comments.md
@@ -8,16 +8,18 @@ class: middle, center
 ---
 class: left
 
-# Single Line
+# Single Line Comment
 
 * Starts with // and continue till End of Line
 
 ---
 class: left
 
-# Multi Line
+# Block Comment
 
-* Every line will have //
+* Supports multi line comments with `/*` and `*/`
+
+* But, it's still idiomatic to use //
 
 ---
 class: left
@@ -34,11 +36,16 @@ let lucky_number = 7;
 * over this... 
 
 ```rust
-    let lucky_number = 7; // I’m feeling lucky today.
+let lucky_number = 7; // I’m feeling lucky today.
 ```      
 
 ---
 class: left
 
 # Summary
+
+* `//` comments for single line 
+
+* `//` for block comments as well instead of `/* */`
+
 
