--- a/static/md/3.5_Control_Flow.md
+++ b/static/md/3.5_Control_Flow.md
@@ -9,7 +9,9 @@ class: middle, center
 class: left
 
 # `if` Expressions
-<!-- why if expression ? -->
+
+An if expression allows us to branch our code depending on conditions
+
 ```rust
 fn main() {
   let number = 3;
@@ -41,23 +43,24 @@ class: left
 ---
 class: left
 
-# **else if** expression
+# `else if` expression
 
 * multiple conditions with **else if**
 
 ---
 class: left
 
-# Using **if** in a **let** statement
+# Using `if` in a `let` statement
 
-* since `if` is an expression we can use it in a statement and assign to a variable.
+* since `if` is an expression we can use it in a statement and assign to a 
+  variable.
 
 ```rust
 let number = if condition {
   5 // expression
 } else {
   6 // expression
-} // expression; // statement
+} // expression
 ```
 
 * Arms of the if expressions should be of same type
@@ -67,11 +70,10 @@ let number = if condition {
   5 // expression
 } else {
   "six" // expression
-} // expression; // statement
+} // expression
 ```
 
-* An if without an else always results in `()` as the value
-
+* An `if` without an `else` always returns an empty tuple `()`
 
 ---
 class: left
@@ -154,7 +156,8 @@ class: left
 
 # Summary
 
-* **if** and **else if** expression should have condition which evaluates to boolean
+* **if** and **else if** expression should have condition which evaluates to 
+  boolean
 
 * Blocks of code called **arms** are executed based on the condition value and 
   all the arms should be of same type
