--- a/static/md/4.2_References_and_Borrowing.md
+++ b/static/md/4.2_References_and_Borrowing.md
@@ -10,23 +10,22 @@ class: left
 
 # References
 
-* Refer to some value with out taking ownership
+Refer to some value with out taking ownership
 
 * You pass references by appending with `&`
 
 ```rust
 fn main() {
   let s1 = String::from("hello");
-
-  let len = calculate_length(&s1);
-
+  let len = calculate_length(&s1); // dosen't pass the ownership only reference
   println!("The length of '{}' is {}.", s1, len);
 }
-
 fn calculate_length(s: &String) -> usize {
   s.len()
 }
 ```
+
+<img src="https://doc.rust-lang.org/book/second-edition/img/trpl04-05.svg" width="500"/>
 
 ---
 class: left
@@ -67,13 +66,15 @@ class: left
 
 # The Rules of References
 
-* One mutable reference, in a particular scope
+In a particular scope...
 
-  or
+  * One mutable reference, in a particular scope
 
-* Any number of immutable references.
+    or
 
-  and 
+  * Any number of immutable references.
+
+    and 
 
 * Valid references
 
@@ -154,6 +155,15 @@ fn dangle() -> &String {
 ---
 class: left
 
+# Dereferencing
+
+* The opposite of referencing by using `&` is dereferencing
+
+* * is the dereference operator  
+
+---
+class: left
+
 # Summary
 
 * use **&** pass references to functions rather than giving ownership
@@ -164,3 +174,6 @@ class: left
   and they have be valid refernces
 
 * This fixes data race conditions and dangling references
+
+* You control the memory usage by using the ownership rules and Rust 
+  automatically clean up that data when the owner goes out of scope
