--- a/static/md/5.1_Defining_and_Instantiating_Struct.md
+++ b/static/md/5.1_Defining_and_Instantiating_Struct.md
@@ -15,7 +15,7 @@ class: left
 
 * Its like tuples, with names and can be composed of different types
 
-* They are like an object’s data attributes in an Object Oriented Languages
+* They are like an object’s data attributes in Object Oriented Languages
 
 ---
 class: left
@@ -49,6 +49,8 @@ let mut user1 = User {
   age: 31,
 };
 ```
+* The struct definition is like a general template for the type, and instances 
+  fill in that template with particular data to create values of the type
 
 * No need to define in the same order we declared
 <!-- can we miss few values from the declaration or add them ? -->
@@ -67,7 +69,7 @@ class: left
 
 * To change a field, entire object must be mutable
 
-* Rust dosen't support single field mutability
+* No single field mutability
 
 ---
 class: left
@@ -94,7 +96,7 @@ class: left
 
 # Field init shorthand 
 
-You can ignore the the value if both the field and the variable have the same name
+You can ignore the value if both the field and the variable have the same name
 
 ```rust
 fn build_user(email: String, username: String) -> User {
@@ -138,7 +140,9 @@ let user2 = User {
   ..user1
 };
 ```
-* the instance should be at the end and shouldn't have a `,` like regular values
+
+* the instance should be at the end and shouldn't have a `,` like regular fields
+
 ---
 class: left
 
