--- a/static/md/6.1_Defining_an_Enum.md
+++ b/static/md/6.1_Defining_an_Enum.md
@@ -10,9 +10,9 @@ class: left
 
 # Enum
 
-* `enum` also known as `enumeration`
+`enum` also known as `enumeration`
 
-* Allow you to define a type by enumerating its possible values
+* Define a type by enumerating its possible values
 
 * enum data structure can only be one of the variants
 
@@ -45,7 +45,7 @@ route(IpAddrKind::V6); // and v6
 ---
 class: left
 
-# Store Data
+# Store Data - with struct
 
 ```rust
 enum IpAddrKind {
@@ -69,7 +69,7 @@ let loopback = IpAddr {
 ---
 class: left
 
-# Store Data consise way
+# Store Data - consise way
 
 ```rust
 enum IpAddr {
@@ -85,4 +85,26 @@ let loopback = IpAddr::V6(String::from("::1"));
 ---
 class: left
 
+# Advantages of enum over struct
+
+* each variant can have different types and amounts of associated data
+
+```rust
+enum IpAddr {
+    V4(u8, u8, u8, u8),
+    V6(String),
+}
+
+let home = IpAddr::V4(127, 0, 0, 1);
+
+let loopback = IpAddr::V6(String::from("::1"));
+```
+
+---
+class: left
+
 # Summary
+
+* Define a type by enumerating its possible values
+
+* Access values with `::`
