--- a/static/md/4.1_What_is_Ownership.md
+++ b/static/md/4.1_What_is_Ownership.md
@@ -12,7 +12,11 @@ class: left
 
 * A Part of memory is available to your code to use at runtime
 
-* They are structured in two ways, stack and heap
+* They are structured in two ways
+
+  * stack
+
+  * heap
 
 ---
 class: left
@@ -23,24 +27,28 @@ class: left
 
 * This is referred to as last in, first out (LIFO)
 
+* All data should take fixed size
+
+* The size of the data is known at compile time
+
 * Adding data is called `push`ing onto the stack
 
 * Removing data is called `pop`ping off the stack
 
 * Fast, because of the way it accesses data
 
-* All data should take up fixed size
-
 ---
 class: left
 
 # Heap
 
-* Heap is less organized
-
 * On requesting, os will find a space, mark it as use and then returns the address
 
 * Address is the `Pointer`
+
+* Heap is less organized
+
+* Data is of varied sizes, lage data takes more time to allocate
 
 * Process of allocating memory is called `allocation on the heap` or simply `allocation`
 
@@ -48,7 +56,6 @@ class: left
 
 * Slow, because we have to follow a pointer to get there
 
-* Data is of varied sizes, lage data takes more time to allocate
 
 ---
 class: left
@@ -87,11 +94,11 @@ class: left
 
 # Ownership Rules
 
-* Each value in Rust has a variable that’s called its owner
+* Each value in Rust has a variable that’s called its **owner**
 
-* There can only be one owner at a time
+* There can only be **one owner at a time**
 
-* When the owner goes out of scope, the value will be dropped
+* When the owner goes **out of scope**, the value will be **dropped**
 
 ---
 class: left
@@ -102,35 +109,52 @@ class: left
 {                      
                       // s is not valid here, it’s not yet declared
   let s = "hello";   // s is valid from this point forward
-
   // do stuff with s
 }                      // this scope is now over, and s is no longer valid
 println!("{}", s) // throws an error, s is no longer available
 ```
+
+Important points in time...
+
+  * When `s` comes into scope, it is valid
+
+  * It remains so until it goes out of scope
+
+---
+class: left
+
+# String vs str (string literal) 
+
+* str (string literal) -  text is hardcoded directly into the final executable
+
+  * fast and efficient to access
+
+  * Size and contents known at compile time, immutable 
+
+* String - Allocated during run time
+
+  * written to heap, slow to allocate and access
+
+  * Size and contents are dynamic, mutable and growable 
 
 ---
 class: left
 
 # Memory and Allocation
 
-<!-- * String literals since immutable are hard coded into the executable 
-
-* In case of mutable, growable piece of text, we need to allocate memory on heap -->
-
-<!-- change the example here... -->
 ```rust 
-let mut s = String::from("hello");
-
-s.push_str(", world!"); // push_str() appends a literal to a String
-
-println!("{}", s); // This will print `hello, world!`
+{
+  let s = String::from("hello"); // s is valid from this point forward
+  // do stuff with s
+}                                // this scope is now over, and s is no
+                                 // longer valid
 ```
 
-* Memory allocated by os at run time during `let mut s = String::from("hello");`
+* Memory allocated in heap at run time during `let mut s = String::from("hello");`
 
 * Memory is automatically returned once the variable that owns it goes out of scope
 
-* Rust calls `drop` automatically at the closing `}`
+* Rust calls a special function `drop` automatically at the closing `}`
 
 ---
 class: left
@@ -152,16 +176,52 @@ class: left
 
 ```rust
 let s1 = String::from("hello");
+```
+
+Allocate the heap for `hello` and push onto stack for the pointer, length and 
+  capacity with variable s1
+
+<img src="https://doc.rust-lang.org/book/second-edition/img/trpl04-01.svg" width="400"/>
+
+---
+class: left
+
+```rust
 let s2 = s1;
 ```
 
-* Allocate the heap for `hello` and push onto stack for the pointer, length and 
-  capacity with variable s1
+Copy the stack memory to the new variable s2
 
-* Copy the stack memory to the new variable s2
+<img src="https://doc.rust-lang.org/book/second-edition/img/trpl04-02.svg" width="400"/>
 
-* Invalidate s1 as both of them are pointing to the same heap because rust can't 
+---
+class: left
+
+```rust
+let s1 = String::from("hello");
+let s2 = s1;
+
+println!("{}, world!", s1);
+```
+
+Invalidate s1 as both of them are pointing to the same heap because rust can't 
   decide which one to drop at the end of the scope
+
+```rust
+error[E0382]: use of moved value: `s1`
+ --> src/main.rs:5:28
+  |
+3 |     let s2 = s1;
+  |         -- value moved here
+4 |
+5 |     println!("{}, world!", s1);
+  |                            ^^ value used here after move
+  |
+  = note: move occurs because `s1` has type `std::string::String`, which does
+  not implement the `Copy` trait
+```
+
+Throws an error if you try to access after the assignement 
 
 ---
 class: left
@@ -209,11 +269,8 @@ class: left
 
 # Ownership and Functions
 
-* Passing a variable to a function will move or copy, just like assignment based 
-  on the type
-
----
-class: left
+Passing a variable to a function will move or copy, just like assignment based 
+on the type
 
 ```rust
 fn main() {
@@ -243,33 +300,23 @@ class: left
 
 # Return Values and Scope
 
-* Returning a variable from a function will move or copy, just like assignment 
-  based on the type
-
----
-class: left
+Returning a variable from a function will move or copy based on the type
 
 ```rust
 fn main() {
   let s = String::from("hello");  // s comes into scope.
-
   takes_ownership(s);             // s's value moves into the function...
                                   // ... and so is no longer valid here.
-
   let x = 5;                      // x comes into scope.
-
   makes_copy(x);                  // x would move into the function,
                                   // but i32 is Copy, so it’s okay to still
                                   // use x afterward.
-
 } // Here, x goes out of scope, then s. But since s's value was moved, nothing
 // special happens.
-
 fn takes_ownership(some_string: String) { // some_string comes into scope.
   println!("{}", some_string);
 } // Here, some_string goes out of scope and `drop` is called. The backing
 // memory is freed.
-
 fn makes_copy(some_integer: i32) { // some_integer comes into scope.
   println!("{}", some_integer);
 } // Here, some_integer goes out of scope. Nothing special happens.
@@ -278,19 +325,42 @@ fn makes_copy(some_integer: i32) { // some_integer comes into scope.
 ---
 class: left
 
+# Passing ownership back to main function
+
+```rust
+fn main() {
+    let s1 = String::from("hello");
+    let (s2, len) = calculate_length(s1);
+    println!("The length of '{}' is {}.", s2, len);
+}
+fn calculate_length(s: String) -> (String, usize) {
+    let length = s.len(); // len() returns the length of a String.
+    (s, length)
+}
+```
+
+* Passing an argument is giving ownership
+
+* Return the value to give back the ownership else parent scope won't have value
+
+* Tedious to tranfer back all the time, use references 
+
+---
+class: left
+
 # Summary
 
-* Memory will be in stack and heap
+* Memory will be organized in **stack** and **heap**
 
-* Memory management is done by Garbage collection, manual or ownership rules
+* Memory management is done by **garbage collection**, **manual** or **ownership rules**
 
-* Rust uses Ownership rules 
+* Rust uses Ownership rules
 
-* Each value will have one and only one owner and its dropped if the owner goes 
-  out of scope
+* Each value will have one owner and its dropped if the owner goes out of scope
 
-* variable scope is limited to the block defined in the {}
+* Variable scope is limited to the block defined in the {}
 
-* variables and data intereact by move, clone and copy operations
+* Variables and data intereact by **move**, **clone** and **copy** operations
 
-* passing a variable to a function is also like an assignment based on the type
+* Passing a variable and returning a variable in a function, will move or copy
+  based on the type
