--- a/static/md/4.3_Slices.md
+++ b/static/md/4.3_Slices.md
@@ -10,7 +10,8 @@ class: left
 
 # Slices
 
-Slices let you reference a contiguous sequence of elements in a collection rather than the whole collection
+Slices let you reference a contiguous sequence of elements in a collection 
+rather than the whole collection
 
 ---
 class: left
@@ -19,9 +20,10 @@ class: left
 
 * string[start..end]
 
-* start..end syntax is a range that begins at start and continues up to, but not including, end
+* start..end syntax is a range that begins at start and continues up to, but 
+  not including, end
 
-* Slice will store pointer to the staring_index and the length 
+* Slice will store pointer to the staring_index and the length
 
 * [0..end] and [..end] slices from beginning
 
@@ -32,7 +34,5 @@ class: left
 
 # Summary
 
-* Ownership, borrowing, and slices ensure memory safety in Rust programs at compile time. 
-
-* You control the memory usage by using the ownership rules and Rust automatically 
-  clean up that data when the owner goes out of scope
+* Ownership, borrowing, and slices ensure memory safety in Rust programs at 
+  compile time
