--- a/static/md/5.3_Method_Syntax.md
+++ b/static/md/5.3_Method_Syntax.md
@@ -11,7 +11,11 @@ class: left
 # Defining Methods
 
 Methods are similar to functions, except they’re defined within the 
-context of a struct, enum or trait and their first parameter is always **self**
+context of a struct, enum or trait and their first parameter is always **&self**
+
+* Declared with the `fn` keyword followed by name
+
+* They can have parameters and a return value
 
 ```rust
 #[derive(Debug)]
@@ -64,7 +68,7 @@ class: left
 
 * Often used for constructors that will return a new instance of the struct
 
-```
+```rust
 impl Rectangle {
   fn square(size: u32) -> Rectangle {
       Rectangle { width: size, height: size }
