improved calling methods and summary

--- a/static/md/5.3_Method_Syntax.md
+++ b/static/md/5.3_Method_Syntax.md
@@ -40,6 +40,15 @@ fn main() {
 ---
 class: left
 
+# Calling methods
+
+* Methods can be called with `.` dot syntax
+
+* `rect1.area()` will call the area method on the `rect1` struct
+
+---
+class: left
+
 # Methods with more parameters
 
 Methods can take multiple parameters that we add to the signature after the 
@@ -92,9 +101,20 @@ let sq = Rectangle::square(3);
 ---
 class: left
 
+# Mutable self
+
+* `&self` by default is a immutable reference
+
+* You can use the `&mut self` to modify the object data in the method
+
+* You can also move the data to the method by using just `self`
+
+---
+class: left
+
 # Multiple `impl` Blocks
 
-* Each struct is allowed to have multiple impl blocks
+Each struct is allowed to have multiple impl blocks
 
 ```rust
 impl Rectangle {
@@ -115,12 +135,21 @@ class: left
 
 # Summary
 
-* Methods are functions defined in a `impl` block with a default paramter `&self`
 
-* They are invoked with `.` syntax
+* Methods are functions defined in a `impl` block with a default parameter `&self`
 
-* Methods without default `&self` paramter are called Associated Functions
+* If the parameter contains...
 
-* They are invoked with `::` synxtax
+  * &self : method can use the values of the struct, but not change them
+
+  * &mut self : method can modify the values
+
+  * self : method will consume the value, which will move
+
+      * They are invoked with `.` syntax
+
+  * no self : called Associate Functions, used as "constructor"
+
+      * They are invoked with `::` synxtax
 
 * A struct can have multiple `impl` blocks
