--- a/static/md/7.1_mod_and_the_Filesystem.md
+++ b/static/md/7.1_mod_and_the_Filesystem.md
@@ -14,23 +14,23 @@ class: left
 
 * A module is a namespace that contains definitions of functions or types, 
   and you can choose whether those definitions are visible outside their module 
-  (public) or not (private).
+  (public) or not (private)
 
 ---
 class: left
 
 # Overview
 
-* The mod keyword declares a new module. 
+* The mod keyword declares a new module
 
 * Code within the module appears either immediately following the declaration 
-  within curly brackets or in another file.
+  within curly brackets or in another file
 
 * By default, functions, types, constants, and modules are private
 
 * Use `pub` keyword to make them public and visible outside its namespace
 
-* The use keyword brings modules, or the definitions inside modules, into scope 
+* The `use` keyword brings modules or the definitions inside modules, into scope 
   so it’s easier to refer to them
 
 ---
@@ -38,8 +38,17 @@ class: left
 
 # `mod` and the filesystem
 
-* Every module definition in Rust starts with the `mod` keyword, name and block 
-  of code `{}`
+* `$ cargo new hello_world --bin` will create a binary, remove `--bin` to create
+  a library
+
+* Use `cargo build` to build the library
+
+---
+class: left
+
+# Module Definitions
+
+Starts with the `mod` keyword, name and block of code `{}`
 
 ```rust
 mod network {
@@ -48,7 +57,7 @@ mod network {
 }
 ```
 
-* Everything in the block `{}` is inside the namespace network
+Everything in the block `{}` is inside the namespace network
 
 ---
 class: left
@@ -76,7 +85,7 @@ class: left
 
 # Calling a method
 
-To call function outisde the module we use the `::` syntax
+To call function outisde the module, use the `::` syntax
 
 ```rust
 network::connect();
@@ -133,14 +142,17 @@ mod server {
 }
 ```
 
-No need for `mod` declaration, just provides content of the the mod
+In network.rs and client.rs, no need for `mod` declaration, just provides 
+content of the the module.
+
+Where as for server you need to declare the `mod` as its inside network.rs
 
 ---
 class: left
 
 # Folder structure
 
-```
+```text
 ├── src
 │   ├── client.rs
 │   ├── lib.rs
@@ -150,6 +162,7 @@ class: left
 ```
 
 Declare `mod` in the main lib file
+
 ```rust
 // /src/lib.rs
 mod network;
@@ -159,7 +172,7 @@ mod client;
 ---
 class: left
 
-Declare the client module contents
+Declare the client module contents in client.rs
 
 ```rust
 // /sr/client.rs
@@ -168,7 +181,7 @@ fn connect(){
 }
 ```
 
-Declare the network module contents along with server mod declaration
+Declare the network module contents along with server mod declaration in mod.rs
 
 ```rust
 // /sr/network/mod.rs
@@ -178,7 +191,7 @@ fn connect(){
 }
 ```
 
-Declare the server module contents
+Declare the server module contents in server.rs
 
 ```rust
 // /src/network/server.rs
@@ -192,13 +205,26 @@ class: left
 
 # Rules of modules with regard to files
 
-* If a module named `foo` has no submodules, you should put the declarations 
-  for foo in a file named foo.rs.
+* If a module named `foo` has 
 
-* If a module named `foo` does have submodules, you should put the declarations 
-  for foo in a file named foo/mod.rs.
+  * submodules : Put the declarations for foo in a file named foo/mod.rs
+
+  * no submodules : Put the declarations for foo in a file named foo.rs
+
+* These rules apply recursively
+
+* The modules should be declared in their parent module’s file using the `mod` 
+  keyword
 
 ---
 class: left
 
 # Summary
+
+* Module provides namespaces and helps organize code
+
+* By default everything is private, use `pub` to make it public
+
+* `mod` declares a module and you can call it with `::`
+
+* If a module has submodules, put the declarations in a file named foo/mod.rs
