Improved explanation, added examples and summary

--- a/static/md/7.2_Controlling_Visibility_with_pub.md
+++ b/static/md/7.2_Controlling_Visibility_with_pub.md
@@ -8,20 +8,94 @@ class: middle, center
 ---
 class: left
 
-# `pub`
+# Public & Private
 
-* use `pub` keyword to make module, functions and types public
+* The default state of all code in Rust is private
 
-* Compiler warns the functions are not used if they are not public
+* If you don’t use a private function within your program Rust will warn you 
+  that the function has gone unused
+
+* when marked public, Rust will stop warning that the function is unused
+
+---
+class: left
+
+# Making a function public
+
+* Use `pub` keyword to make module, functions and types public
+
+* The `pub` keyword is placed right before `mod` or `fn`
 
 ---
 class: left
 
 # Privacy Rules
 
-Overall, these are the rules for item visibility:
+If an item is 
 
-* If an item is public, it can be accessed through any of its parent modules
+    * public : Accessed by any of its parent modules
 
-* If an item is private, it can be accessed only by its immediate parent module 
-  and any of the parent’s child modules
+    * private : Accessed only by its immediate parent module and any of the 
+      parent’s child modules
+
+---
+class: left
+
+# Example1
+
+```rust
+mod outermost {
+    pub fn middle_function() {}
+    fn middle_secret_function() {}
+    mod inside {
+        pub fn inner_function() {}
+        fn secret_function() {}
+    }
+}
+fn try_me() {
+    outermost::middle_function();
+    outermost::middle_secret_function();
+    outermost::inside::inner_function();
+    outermost::inside::secret_function();
+}
+```
+
+---
+class: left
+
+# Example1 : Errors
+
+```rust
+mod outermost {
+    pub fn middle_function() {}
+    fn middle_secret_function() {}
+    mod inside {
+        pub fn inner_function() {}
+        fn secret_function() {}
+    }
+}
+fn try_me() {
+    // public and accessible
+    outermost::middle_function(); 
+    // not public
+    outermost::middle_secret_function(); 
+    // though inner fucntion is public, inside is not public
+    outermost::inside::inner_function(); 
+    // inner fucntion is not public and inside is also not public
+    outermost::inside::secret_function();
+}
+```
+
+---
+class: left
+
+# Summary
+
+* The default state of all code in Rust is private
+
+* `pub` will make the item public
+
+* If an item is public, it is accessed by any of its parent modules
+
+* If an item is private, it is accessed only by its immediate parent module and 
+  any of the parent’s child modules
