Added more details and summary

--- a/static/md/7.3_Referring_to_Names_in_Different_Modules.md
+++ b/static/md/7.3_Referring_to_Names_in_Different_Modules.md
@@ -24,10 +24,14 @@ fn main() {
 }
 ```
 
+* Call function by fully specifying its enclosing module’s path joined by `::`
+
+* Someties referring to the fully qualified name can get quite lengthy 
+
 ---
 class: left
 
-# Bringing module Names into Scope with the `use` Keyword
+# Bringing Names into Scope
 
 ```rust
 pub mod a {
@@ -45,10 +49,17 @@ fn main() {
 }
 ```
 
+* `use` keyword follwed by the enclosing module’s path brings the module into 
+  scope 
+
+* It dosen't bring the childrens of module into scope
+
 ---
 class: left
 
-# Bringing functions into Scope with the `use` Keyword
+# Bringing functions into Scope
+
+You can also directly bring a function into the scope with `use`
 
 ```rust
 pub mod a {
@@ -66,10 +77,15 @@ fn main() {
 }
 ```
 
+This exclude all the modules and reference the function directly
+
 ---
 class: left
 
-# Bringing `enums` into Scope with the `use` Keyword
+# Bringing `enums` into Scope
+
+Because enums also form a sort of namespace like modules, we can bring an enum’s
+ variants into scope with `use`
 
 ```rust
 enum TrafficLight {
@@ -86,8 +102,12 @@ fn main() {
   let green = TrafficLight::Green;
 }
 ```
-Still specifying the TrafficLight namespace for the Green variant because we 
-didn’t include Green in the use statement
+
+* if bringing multiple items from one namespace into scope, you can list them 
+  using curly brackets and commas in the last position
+
+* Still specifying the TrafficLight namespace for the Green variant because we 
+  didn’t include Green in the use statement
 
 ---
 class: left
@@ -132,4 +152,26 @@ super::client::connect();
 ---
 class: left
 
+# Root `::` vs `super::`
+
+When compared with using the root `::`
+
+  * super is helpful incase of deep modules
+
+  * super won't break the modules even if they are re arranged
+
+---
+class: left
+
 # Summary
+
+* You call a function in side a module with fully qualified name `a::series::of::nested_modules();`
+
+* `use` keyword follwed by the enclosing module’s path brings the module into 
+  scope 
+
+* Bring all the items in a namespace into scope at once using `*` 
+
+* `::` at the begining of the path lets you access the root of the module
+
+* `super::` lets you access the parent directory
