improved explanation and added to index

--- a/static/md/8.0_Common_Collections.md
+++ b/static/md/8.0_Common_Collections.md
@@ -13,12 +13,13 @@ class: left
 * Rust’s standard library includes a number of very useful data structures 
   called collections.
 
-* Most other data types represent one specific value, but collections can 
-  contain multiple values 
+* Most data types represent one specific value, but collections can contain 
+  multiple values 
   
 * Unlike the built-in array and tuple types, the data these collections point 
-  to is stored on the heap, which means the amount of data does not need to be 
-  known at compile time and can grow or shrink as the program runs
+  to is stored on the heap, which means
+    * amount of data does not need to be known at compile time 
+    * can grow or shrink as the program runs
   
 * Each kind of collection has different capabilities and costs, and choosing an 
   appropriate one for your current situation is a skill you’ll develop over time
@@ -34,5 +35,13 @@ The major three types of collections commonly used are...
 
 * string: a collection of characters
 
-* hash map: associate a value with a particular key.
-  It’s a particular implementation of the more general data structure called a map
+* hash map: associate a value with a particular key
+
+---
+class: left
+
+# Summary
+
+* Collections can contain multiple values
+
+* vectors, strings and hash map
