added summary and refactored

--- a/static/md/8.1_Vectors.md
+++ b/static/md/8.1_Vectors.md
@@ -10,29 +10,40 @@ class: left
 
 # Vectors Store Lists of Values
 
+* Store more than one value in a single data structure
+
+* Puts all the values next to each other in memory
+
+* Vectors are implemented using generics
+
 * Vector also represented as `Vec<T>`
 
-* store more than one value in a single data structure that puts all the values 
-  next to each other in memory
+* `Vec<T>` type provided by the standard library can hold any type
 
-* Can only store values of the same type
+* All the values should be of the same type
+
+* Use cases: lines of text in a file, prices of items in a shopping cart
 
 ---
 class: left
 
 # Creating a New Vector
 
-* function
+# `vec<T>` 
 
 ```rust
 let v: Vec<i32> = Vec::new();
 ```
 
-* macro
+Creates a new empty vector to hold values of type `i32`
+
+# `vec!` macro
 
 ```rust
 let v = vec![1, 2, 3];
 ```
+
+Rust provides the `vec!` macro for convenience
 
 ---
 class: left
@@ -49,42 +60,69 @@ v.push(6);
 v.push(7);
 ```
 
-*** ? 
-* The numbers we place inside are all of type i32, and Rust infers this from the data, so we don’t need the Vec<i32> annotation.
+* Use `mut` to make it mutable
 
+* Infers type from the data, so we don’t need to add Vec<i32> annotation
+ 
 ---
 class: left
 
 # Dropping a Vector Drops Its Elements
+
+```rust
+{
+    let v = vec![1, 2, 3, 4];
+    // do stuff with v
+} // <- v goes out of scope and is freed here
+```
+
+* vector will be dropped when it goes out of scope
+
+* When the vector gets dropped, all of its contents will also be dropped
+
+* integers vector holds will be cleaned up
 
 ---
 class: left
 
 # Reading Elements of Vectors
 
-Two ways to reference a value stored in a vector, which helps how the program 
-behaves when you try to use an index value that the vector doesn’t have an element for.
+Two ways to reference a value stored in a vector
+
+`indexing` Syntax
 
 ```rust
 let v = vec![1, 2, 3, 4, 5];
 let third: &i32 = &v[2];
 ```
 
-* gives the reference to the third element
+* gives the reference to the element
+
 * Non existent element access will cause a panic!
+
+`get` Method
 
 ```rust
 let v = vec![1, 2, 3, 4, 5];
 let third: Option<&i32> = v.get(2);
 ```
 
-* get method with the index passed as an argument gives us Option<&T>.
-* Non existent element access will return `None` without panicking
+* get method with the index passed as an argument gives us Option<&T>
+
+* Non existent element access will return `None` without panic
 
 ---
 class: left
 
 # Invalid References
+
+When the program has a valid reference the borrow checker enforces 
+
+  * the ownership 
+
+  * borrowing rules 
+
+to ensure references to the contents of the vector remain valid
 
 ```rust
 let mut v = vec![1, 2, 3, 4, 5];
@@ -92,13 +130,26 @@ let first = &v[0];
 v.push(6);
 ```
 
+Attempting to add an element to a vector while holding a reference to an item
+
+```rust
+error[E0502]: cannot borrow `v` as mutable because it is also borrowed as immutable
+ -->
+  |
+4 |     let first = &v[0];
+  |                  - immutable borrow occurs here
+5 |
+6 |     v.push(6);
+  |     ^ mutable borrow occurs here
+7 |
+8 | }
+  | - immutable borrow ends here
+```
+
 * Can't add an element to a vector while holding a reference to an item
 
-* reason: adding a new element onto the end of the vector might require 
-allocating new memory and copying the old elements to the new space. 
-In that case, the reference to the first element would be pointing to 
-deallocated memory.(dangling references) 
-The borrowing rules prevent programs from ending up in that situation.
+* reason: adding a new element might require allocating new memory and copying 
+  the old elements to the new space
 
 ---
 class: left
@@ -123,8 +174,7 @@ for i in &mut v {
 }
 ```
 
-To change the value that the mutable reference refers to, we have to use the 
-dereference operator (*) to get to the value in i before we can use the += operator
+To change the value we have to use the dereference operator (*)
 
 ---
 class: left
@@ -133,8 +183,10 @@ class: left
 
 * Vectors can only store values that are the same type
 
-* The variants of an enum are defined under the same enum type, 
-  so we cab use an enum!
+* This can be inconvenient
+
+* We can use `enum`, because all the variants of an enum are defined under the 
+  same enum type
 
 ```rust
 enum SpreadsheetCell {
@@ -153,11 +205,36 @@ let row = vec![
 ---
 class: left
 
+# Reason for types in vector
 
-* Explicit about what types are allowed in this vector
+* Explicit about what types are allowed
 
-* Rust needs to know types in a vector at compile time to assign exactly how 
-  much memory on the heap will be needed to store each element
+* How much memory on the heap will be needed to store each element
 
-* Using an enum plus a match expression means that we always handle every possible case
+* Using an enum plus a match expression helps handle every possible case
 
+* If types are not known at compile time, enum technique won’t work. 
+
+* You can use a trait object, in such case
+
+---
+class: left
+
+# Summary
+
+* `Vector` stores more than one value
+
+* Created with `Vec<T>::new()` or `vec![]` macro 
+
+* Update a vector with `.push()`
+
+* Read elements of a vector with `index` or `.get()`
+
+* When referencing elements, ownership and borrowing rules are applied
+
+* You can itereate with a for loop using a reference `&` or a mutable reference 
+  `&mut`
+
+* Since `vec` stores only one type, you can use `enum` to store multiple
+
+* If types are not known at compile time, you can use `traits`
